--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,9 +4,9 @@ CC      = c++
 
 OBJDIR  = obj
 
-CPPFLAG = -Werror -Wall -Wextra -std=c++98 -g3 -fsanitize=address
+CPPFLAG = -Werror -Wall -Wextra -std=c++98 #-g3 -fsanitize=address
 
-SRC     = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp
+SRC     = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 
 OBJ     = $(addprefix $(OBJDIR)/, $(SRC:.cpp=.o))
 
